--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/core-recommended": "^10.2",
         "drupal/devel": "^5.1",
         "drupal/restui": "^1.21",
+        "drupal/saml_sp": "^4.2",
         "drupal/smtp": "^1.2"
     },
     "conflict": {
